Загружены все img, подключены контентные изображения

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <body>
     <header class="main-header">
       <nav class="main-navigation">
-        <a class="main-header-logo">
-          <img src="#" width="60" height="60" alt="Логотип сайта посвященного отдыху в городе Седона">
+        <a class="main-header-logo" href="index.html">
+          <img src="img/logo.svg" width="140" height="71" alt="Логотип города Седона">
         </a>
         <ul class="site-navigation">
           <li><a href="info.html">Информация</a></li>
