--- a/sedona-hotels.html
+++ b/sedona-hotels.html
@@ -7,8 +7,8 @@
   <body>
     <header class="main-header">
       <nav class="main-navigation">
-        <a class="main-header-logo">
-          <img src="#" width="60" height="60" alt="Логотип сайта посвященного отдыху в городе Седона">
+        <a class="main-header-logo" href="index.html">
+          <img src="img/logo.svg" width="140" height="71" alt="Логотип города Седона">
         </a>
         <ul class="site-navigation">
           <li><a href="info.html">Информация</a></li>
@@ -37,7 +37,7 @@
             </h3>
             <p class="catalog-item-image">
               <a href="catalog-item.html">
-                <img src="img/hotel-1.jpg" width="60" height="100" alt="Гостиница Amara Resort & SPA">
+                <img src="img/amara-resort.jpg" width="135" height="90" alt="Гостиница Amara Resort & SPA">
               </a>
             </p>
             <p class="catalog-item-price">
@@ -56,7 +56,7 @@
             </h3>
             <p class="catalog-item-image">
               <a href="catalog-item.html">
-                <img src="img/hotel-2.jpg" width="60" height="100" alt="Мотель Desert Quail Inn">
+                <img src="img/desert-quail.jpg" width="135" height="90" alt="Мотель Desert Quail Inn">
               </a>
             </p>
             <p class="catalog-item-price">
@@ -75,7 +75,7 @@
             </h3>
             <p class="catalog-item-image">
               <a href="catalog-item.html">
-                <img src="img/hotel-3.jpg" width="60" height="100" alt="Апартаменты Villas at Poco Diablo">
+                <img src="img/villas-poco-diablo.jpg" width="135" height="90" alt="Апартаменты Villas at Poco Diablo">
               </a>
             </p>
             <p class="catalog-item-price">
