Добавлены состояния интерактивных элементов - меню и кнопки в карточках отелей на странице поиска.

--- a/index.html
+++ b/index.html
@@ -18,17 +18,16 @@
         </a>
         <ul class="site-navigation">
           <li class="site-navigation-item">
-            <a class="site-navigation-link" href="info.html">Информация</a>
+            <a class="site-navigation-link text-interactive" href="info.html">Информация</a>
           </li>
           <li class="site-navigation-item">
-            <a class="site-navigation-link" href="photo-video-gallerie.html">Фото и видео</a>
-          </li>
-          <li class="site-navigation-item"></li>
-          <li class="site-navigation-item">
-            <a class="site-navigation-link" href="arisona-map.html">Карта штата</a>
+            <a class="site-navigation-link text-interactive" href="photo-video-gallerie.html">Фото и видео</a>
           </li>
           <li class="site-navigation-item">
-            <a class="site-navigation-link" href="hotels.html">Гостиницы</a>
+            <a class="site-navigation-link text-interactive" href="arisona-map.html">Карта штата</a>
+          </li>
+          <li class="site-navigation-item">
+            <a class="site-navigation-link text-interactive" href="hotels.html">Гостиницы</a>
           </li>
         </ul>
       </nav>
@@ -159,7 +158,7 @@
       </div>
       <p class="footer-copyright">
         <span>Website by</span>
-        <a class="button" href="https://htmlacademy.ru">
+        <a class="button" href="https://htmlacademy.ru/intensive/htmlcss">
           <img class="dev-logo" src="img/dev-logo.svg" alt="HTML Academy">
         </a>
       </p>
