--- a/sedona-hotels.html
+++ b/sedona-hotels.html
@@ -18,17 +18,16 @@
         </a>
         <ul class="site-navigation">
           <li class="site-navigation-item">
-            <a class="site-navigation-link" href="info.html">Информация</a>
+            <a class="site-navigation-link text-interactive" href="info.html">Информация</a>
           </li>
           <li class="site-navigation-item">
-            <a class="site-navigation-link" href="photo-video-gallerie.html">Фото и видео</a>
-          </li>
-          <li class="site-navigation-item"></li>
-          <li class="site-navigation-item">
-            <a class="site-navigation-link" href="arisona-map.html">Карта штата</a>
+            <a class="site-navigation-link text-interactive" href="photo-video-gallerie.html">Фото и видео</a>
           </li>
           <li class="site-navigation-item">
-            <a class="site-navigation-link" href="hotels.html">Гостиницы</a>
+            <a class="site-navigation-link text-interactive" href="arisona-map.html">Карта штата</a>
+          </li>
+          <li class="site-navigation-item">
+            <a class="site-navigation-link text-interactive" href="hotels.html">Гостиницы</a>
           </li>
         </ul>
       </nav>
@@ -89,14 +88,10 @@
               </h3>
               <span class="catalog-category">Гостиница</span>
               <span class="catalog-item-price">от 4 000 ₽</span>
-              <ul class="catalog-item-buttons-list">
-                <li class="catalog-item-button catalog-item-details">
-                  <a href="#">Подробнее</a>
-                </li>
-                <li class="catalog-item-button catalog-item-reservation">
-                  <a href="#">Забронировать</a>
-                </li>
-              </ul>
+              <div class="controls-group">
+                <a class="controls-group-button button-blue" href="#">Подробнее</a>
+                <a class="controls-group-button catalog-item-reservation button-brown" href="#">Забронировать</a>
+              </div>
             </div>
             <div class="catalog-item-rating">
               <img class="catalog-item-stars" src="img/star.svg" alt="Звезда">
@@ -114,14 +109,10 @@
               </h3>
               <span class="catalog-category">Мотель</span>
               <span class="catalog-item-price">от 3 000 ₽</span>
-              <ul class="catalog-item-buttons-list">
-                <li class="catalog-item-button catalog-item-details">
-                  <a href="#">Подробнее</a>
-                </li>
-                <li class="catalog-item-button catalog-item-reservation">
-                  <a href="#">Забронировать</a>
-                </li>
-              </ul>
+              <div class="controls-group">
+                <a class="controls-group-button button-blue" href="#">Подробнее</a>
+                <a class="controls-group-button catalog-item-reservation button-brown" href="#">Забронировать</a>
+              </div>
             </div>
             <div class="catalog-item-rating">
               <img class="catalog-item-stars" src="img/star.svg" alt="Звезда">
@@ -138,14 +129,10 @@
               </h3>
               <span class="catalog-category">Апартаменты</span>
               <span class="catalog-item-price">от 2 000 ₽</span>
-              <ul class="catalog-item-buttons-list">
-                <li class="catalog-item-button catalog-item-details">
-                  <a href="#">Подробнее</a>
-                </li>
-                <li class="catalog-item-button catalog-item-reservation">
-                  <a href="#">Забронировать</a>
-                </li>
-              </ul>
+              <div class="controls-group">
+                <a class="controls-group-button button-blue" href="#">Подробнее</a>
+                <a class="controls-group-button catalog-item-reservation button-brown" href="#">Забронировать</a>
+              </div>
             </div>
             <div class="catalog-item-rating">
               <img class="catalog-item-stars" src="img/star.svg" alt="Звезда">
@@ -179,11 +166,12 @@
       </div>
       <p class="footer-copyright">
         <span>Website by</span>
-        <a class="button" href="https://htmlacademy.ru">
+        <a class="button" href="https://htmlacademy.ru/intensive/htmlcss">
           <img class="dev-logo" src="img/dev-logo.svg" alt="HTML Academy">
         </a>
       </p>
     </footer>
   </div>
 </body>
+
 </html>
